# llama_cpp_fork_logprob

./: CMakeLists.txt  Makefile  README.md  cmake-b-cuda.bat  cmake-b-no-cuda.bat
common/: build-info.cpp
examples/server/: colorthemes.css.hpp  completion.js.hpp  index-new.html.hpp  index.html.hpp  index.js.hpp  json-schema-to-grammar.mjs.hpp  prompt-formats.js.hpp  style.css.hpp  system-prompts.js.hpp  theme-beeninorder.css.hpp  theme-ketivah.css.hpp  theme-mangotango.css.hpp  theme-playground.css.hpp  theme-polarnight.css.hpp  theme-snowstorm.css.hpp
examples/simple/: CMakeLists.txt  simple.cpp
examples/simple_backup/: simple.cpp
